# 6682stm

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: docs.txt  format.md
src/: 668.c  file.c  file.h  log.c  log.h  main.c  options.h  pattern.c  pattern.h  song.h  stm.c  types.h
